--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -1,37 +1,33 @@
 [package]
 name = "beaumont-macros"
-version = "0.1.1"
-license = "WTFPL"
-authors = [
-    "Paolo Angioletti <paolo.angioletti@gmail.com>"
-]
-edition = "2024"
-description = "Algorithmic trading for quantitative financial applications"
-repository = "https://github.com/pangiole/beaumont"
-keywords = [
-    "trading",
-    "finance",
-    "quantitative",
-    "algorithmic",
-    "pricing"
-]
-categories = [
-    "finance",
-    "algorithms",
-    "mathematics"
-]
-exclude = [
+version.workspace = true
+license.workspace = true
+authors.workspace = true
+edition.workspace = true
+description.workspace = true
+repository.workspace = true
+readme.workspace = true
+keywords.workspace = true
+categories.workspace = true
+exclude = [ ]
 
-]
 
 [lib]
 proc-macro = true
 
 
 [dependencies]
-proc-macro2 = { version = "1.0.103", default-features = false, features = ["proc-macro"] }
-syn = { version = "2.0.109", default-features = false, features = ["parsing", "proc-macro"]  }
+#proc-macro2 = { version = "1.0.103", default-features = false, features = ["proc-macro"] }
+#syn = { version = "2.0.109", default-features = false, features = ["parsing", "proc-macro"]  }
+proc-macro2 = "1.0.103"
+syn = { version = "2.0.109", features = ["full", "extra-traits"] }
+quote = "1.0.42"
+
 
 [dev-dependencies]
 trybuild = "1.0.114"
+macrotest = "1.2.0"
 
+
+[package.metadata.docs.rs]
+rustdoc-args = ["--no-deps"]
